test/bugs-reported/bug2.good
bug2.chpl:1: syntax error: no matching parenthesis found for '{'
