test/bugs-reported/bug2.bad
bug2.chpl:9: syntax error
